[package]
name = "primitives"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
impl-serde = { version = "0.4.0", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }

sp-api = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.32" }

[dev-dependencies]
hex = "*"
hex-literal = "0.3"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
	"codec/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"log/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]